--- a/index.html
+++ b/index.html
@@ -100,91 +100,237 @@
         </ul>
         <div class="tabs-content" data-tabs-content="game-resume">
           <div class="tabs-panel is-active" id="panel1">
-            <div class="row collapse">
-              <div class="small-12 column">
-                <div class="hpMatch">
-                  <div>
-                    <p><img src="http://placehold.it/30x30" alt="" />Voir</p>
-                    <p><i class="fa fa-clock-o" aria-hidden="true"></i>21:00 Europe/Paris</p>
+            <div class="hpMatch">
+              <div class="even-hpMatch hpMatch-body hpMatch-middle hpMatch-list-body">
+                <div class="guess-right-img">
+                  <img class="img-league" src="http://euw.leagueoflegends.com/sites/default/files/styles/scale_xlarge/public/upload/lcs_client_hdr_1920x1080_worlds_1_0.jpg?itok=pvfITZIW" alt="" width="220" height="105">
+                  <b class="opacity-b"></b>
+                </div>
+                <div class="title-hpMatch-wrap">
+                  <h3 class="title-hpMatch ellipsis" title="Championnats du monde Lol">
+
+                    Championnats du monde LoL
+                  </h3>
+                  <i class="small-icons"></i>
+                  <p class="hpMatch-date">05/06/17</p>
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Darkkbow</span>
+                  </p>
+                </div>
+                <div class="item-player-vs float-left clearfix">
+
+                  <div class="item-img-vs float-right">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAcaAAAAJDYxNDEzZDA2LTFhOGItNDMyZC1hZWRmLTJmNmZiNzBjODJmYg.jpg" alt="Darkkbow">
                   </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
+
+                </div>
+                <div class="item-center-vs">
+                  <p class="item-score-vs">5 : 1</p>
+                  <div class="btn-wrap-vs">
+                    <a href="#">Match</a>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="row collapse">
-              <div class="small-12 column">
-                <div class="hpMatch">
-                  <div>
-                    <p><img src="http://placehold.it/30x30" alt="" />Voir</p>
-                    <p><i class="fa fa-clock-o" aria-hidden="true"></i>21:00 Europe/Paris</p>
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
+                <div class="item-player-vs float-right clearfix">
+                  <div class="item-img-vs float-left">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/2/005/0b6/280/3bb13ad.jpg" alt="Myllos Ferrety">
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="row collapse">
-              <div class="small-12 column">
-                <div class="hpMatch">
-                  <div>
-                    <p><img src="http://placehold.it/30x30" alt="" />Voir</p>
-                    <p><i class="fa fa-clock-o" aria-hidden="true"></i>21:00 Europe/Paris</p>
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
-                  <div class="">
-                    TEST
-                  </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Myllos Ferrety</span>
+                  </p>
                 </div>
               </div>
-            </div>
-            <div class="row collapse">
-              <div class="small-12 column">
-                <div class="hpMatch">
-                  <div>
-                    <p><img src="http://placehold.it/30x30" alt="" />Voir</p>
-                    <p><i class="fa fa-clock-o" aria-hidden="true"></i>21:00 Europe/Paris</p>
+              <div class="odd-hpMatch hpMatch-body hpMatch-middle hpMatch-list-body">
+                <div class="title-hpMatch-wrap">
+                  <h3 class="title-hpMatch ellipsis" title="Championnats du monde">
+                    <i class="small-icons"></i>
+                    Championnats du monde
+                  </h3>
+                  <p class="hpMatch-date">05/06/17</p>
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Darkkbow</span>
+                  </p>
+                </div>
+                <div class="item-player-vs float-left clearfix">
+
+                  <div class="item-img-vs float-right">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAcaAAAAJDYxNDEzZDA2LTFhOGItNDMyZC1hZWRmLTJmNmZiNzBjODJmYg.jpg" alt="Darkkbow">
                   </div>
-                  <div class="">
-                    TEST
+
+                </div>
+                <div class="item-center-vs">
+                  <p class="item-score-vs">5 : 1</p>
+                  <div class="btn-wrap-vs">
+                    <a href="#">Match</a>
                   </div>
-                  <div class="">
-                    TEST
+                </div>
+                <div class="item-player-vs float-right clearfix">
+                  <div class="item-img-vs float-left">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/2/005/0b6/280/3bb13ad.jpg" alt="Myllos Ferrety">
                   </div>
-                  <div class="">
-                    TEST
+
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Myllos Ferrety</span>
+                  </p>
+                </div>
+              </div>
+              <div class="even-hpMatch hpMatch-body hpMatch-middle hpMatch-list-body">
+                <div class="title-hpMatch-wrap">
+                  <h3 class="title-hpMatch ellipsis" title="Championnats du monde">
+                    <i class="small-icons"></i>
+                    Championnats du monde
+                  </h3>
+                  <p class="hpMatch-date">05/06/17</p>
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Darkkbow</span>
+                  </p>
+                </div>
+                <div class="item-player-vs float-left clearfix">
+
+                  <div class="item-img-vs float-right">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAcaAAAAJDYxNDEzZDA2LTFhOGItNDMyZC1hZWRmLTJmNmZiNzBjODJmYg.jpg" alt="Darkkbow">
                   </div>
-                  <div class="">
-                    TEST
+
+                </div>
+                <div class="item-center-vs">
+                  <p class="item-score-vs">5 : 1</p>
+                  <div class="btn-wrap-vs">
+                    <a href="#">Match</a>
                   </div>
+                </div>
+                <div class="item-player-vs float-right clearfix">
+                  <div class="item-img-vs float-left">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/2/005/0b6/280/3bb13ad.jpg" alt="Myllos Ferrety">
+                  </div>
+
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Myllos Ferrety</span>
+                  </p>
+                </div>
+              </div>
+              <div class="odd-hpMatch hpMatch-body hpMatch-middle hpMatch-list-body">
+                <div class="title-hpMatch-wrap">
+                  <h3 class="title-hpMatch ellipsis" title="Championnats du monde">
+                    <i class="small-icons"></i>
+                    Championnats du monde
+                  </h3>
+                  <p class="hpMatch-date">05/06/17</p>
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Darkkbow</span>
+                  </p>
+                </div>
+                <div class="item-player-vs float-left clearfix">
+
+                  <div class="item-img-vs float-right">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAcaAAAAJDYxNDEzZDA2LTFhOGItNDMyZC1hZWRmLTJmNmZiNzBjODJmYg.jpg" alt="Darkkbow">
+                  </div>
+
+                </div>
+                <div class="item-center-vs">
+                  <p class="item-score-vs">5 : 1</p>
+                  <div class="btn-wrap-vs">
+                    <a href="#">Match</a>
+                  </div>
+                </div>
+                <div class="item-player-vs float-right clearfix">
+                  <div class="item-img-vs float-left">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/2/005/0b6/280/3bb13ad.jpg" alt="Myllos Ferrety">
+                  </div>
+
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Myllos Ferrety</span>
+                  </p>
+                </div>
+              </div>
+              <div class="even-hpMatch hpMatch-body hpMatch-middle hpMatch-list-body">
+                <div class="title-hpMatch-wrap">
+                  <h3 class="title-hpMatch ellipsis" title="Championnats du monde">
+                    <i class="small-icons"></i>
+                    Championnats du monde
+                  </h3>
+                  <p class="hpMatch-date">05/06/17</p>
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Darkkbow</span>
+                  </p>
+                </div>
+                <div class="item-player-vs float-left clearfix">
+
+                  <div class="item-img-vs float-right">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAcaAAAAJDYxNDEzZDA2LTFhOGItNDMyZC1hZWRmLTJmNmZiNzBjODJmYg.jpg" alt="Darkkbow">
+                  </div>
+
+                </div>
+                <div class="item-center-vs">
+                  <p class="item-score-vs">5 : 1</p>
+                  <div class="btn-wrap-vs">
+                    <a href="#">Match</a>
+                  </div>
+                </div>
+                <div class="item-player-vs float-right clearfix">
+                  <div class="item-img-vs float-left">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/2/005/0b6/280/3bb13ad.jpg" alt="Myllos Ferrety">
+                  </div>
+
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Myllos Ferrety</span>
+                  </p>
+                </div>
+              </div>
+              <div class="odd-hpMatch hpMatch-body hpMatch-middle hpMatch-list-body">
+                <div class="title-hpMatch-wrap">
+                  <h3 class="title-hpMatch ellipsis" title="Championnats du monde">
+                    <i class="small-icons"></i>
+                    Championnats du monde
+                  </h3>
+                  <p class="hpMatch-date">05/06/17</p>
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Darkkbow</span>
+                  </p>
+                </div>
+                <div class="item-player-vs float-left clearfix">
+
+                  <div class="item-img-vs float-right">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAcaAAAAJDYxNDEzZDA2LTFhOGItNDMyZC1hZWRmLTJmNmZiNzBjODJmYg.jpg" alt="Darkkbow">
+                  </div>
+
+                </div>
+                <div class="item-center-vs">
+                  <p class="item-score-vs">5 : 1</p>
+                  <div class="btn-wrap-vs">
+                    <a href="#">Match</a>
+                  </div>
+                </div>
+                <div class="item-player-vs float-right clearfix">
+                  <div class="item-img-vs float-left">
+                    <img width="40" height="30" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/2/005/0b6/280/3bb13ad.jpg" alt="Myllos Ferrety">
+                  </div>
+
+                </div>
+                <div class="item-data-vs">
+                  <p class="item-name-vs">
+                    <span class="ellipsis name-length-vs">Myllos Ferrety</span>
+                  </p>
                 </div>
               </div>
             </div>
